--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,10 +14,15 @@
         android:theme="@style/Theme.CashLedger"
         tools:targetApi="31">
         <activity
-            android:name=".SignupActivity"
+            android:name=".Signin_activity"
+            android:exported="true"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.NoActionBar"
-            android:exported="true" />
+            android:theme="@style/AppTheme.NoActionBar"/>
+        <activity
+            android:name=".SignupActivity"
+            android:exported="true"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".IntroActivity"
             android:exported="true"
